--- a/Signin.html
+++ b/Signin.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <title>www.Signin.com</title>
+        <style>
+            .container2 {
+                width: 300px;
+                margin: auto;
+                padding: 30px;
+                border: 1px solid #bd1616;
+                border-radius: 5px;
+                box-shadow: 0 0 10px rgba(11, 29, 63, 0.1);
+            }
+        </style>
     </head>
     <body>
+        <div class="container2">
         <form>
             <h1>Sign-in</h1>
             <p>Username</p>
@@ -14,5 +25,6 @@
             <input type = "submit" value = "Log-in" /><br>
             <a href = "Signup.html">Don't have an account? Sign-up</a><br>
         </form>
+        </div>
     </body>
 </html>
