--- a/info.html
+++ b/info.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <title>www.info.com</title>
+        <style>
+            .container3 {
+                width: 450px;
+                margin: auto;
+                padding: 30px;
+                border: 1px solid #bd1616;
+                border-radius: 5px;
+                box-shadow: 0 0 10px rgba(11, 29, 63, 0.1);
+            }
+        </style>
     </head>
     <body>
+        <div class="container3">
         <h1>More info!</h1>
         <p>Why we ask for more information? We ask for more information to provide a better user experience and ensure the security of your account.</p>
         <form>
@@ -41,5 +52,6 @@
             <a href = "Signin.html">Go back to Sign-in page</a>
             <a href = "Signup.html">Go back to Sign-up page</a>
         </form>
+        </div>
     </body>
 </html>
