--- a/Signup.html
+++ b/Signup.html
@@ -7,6 +7,7 @@
         <style>
             .container {
                 width: 300px;
+                background-color: blue;
                 margin: auto;
                 padding: 30px;
                 border: 1px solid #bd1616;
@@ -15,7 +16,7 @@
             }
         </style>
     </head>
-    <body>
+    <body bgcolor="grey">
         <div class="container">
         <form>
             <h1>Sign-up!</h1>
