--- a/info.html
+++ b/info.html
@@ -7,6 +7,7 @@
         <style>
             .container3 {
                 width: 450px;
+                background-color: blue;
                 margin: auto;
                 padding: 30px;
                 border: 1px solid #bd1616;
@@ -15,7 +16,7 @@
             }
         </style>
     </head>
-    <body>
+    <body bgcolor="grey">
         <div class="container3">
         <h1>More info!</h1>
         <p>Why we ask for more information? We ask for more information to provide a better user experience and ensure the security of your account.</p>
