--- a/info.html
+++ b/info.html
@@ -3,18 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css">
         <title>www.info.com</title>
-        <style>
-            .container3 {
-                width: 450px;
-                background-color: blue;
-                margin: auto;
-                padding: 30px;
-                border: 1px solid #bd1616;
-                border-radius: 5px;
-                box-shadow: 0 0 10px rgba(11, 29, 63, 0.1);
-            }
-        </style>
     </head>
     <body bgcolor="grey">
         <div class="container3">
