--- a/Signin.html
+++ b/Signin.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="index.css">
         <title>www.Signin.com</title>
     </head>
-    <body bgcolor="grey">
+    <body>
         <div class="container2">
         <form>
             <h1>Sign-in</h1>
