--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="index.css">
         <title>www.info.com</title>
     </head>
-    <body bgcolor="grey">
+    <body>
         <div class="container3">
         <h1>More info!</h1>
         <p>Why we ask for more information? We ask for more information to provide a better user experience and ensure the security of your account.</p>
