--- a/Signup.html
+++ b/Signup.html
@@ -7,7 +7,7 @@
         <link rel="script" href="index.js"
         <title>www.signup.com</title>
     </head>
-    <body bgcolor="grey">
+    <body>
         <div class="container">
         <form>
             <h1>Sign-up!</h1>
