--- a/Signin.html
+++ b/Signin.html
@@ -16,8 +16,10 @@
             <input type = "password" placeholder="Enter Password" />
             <a href = "#">Forgot Password?</a><br><br>
             <input type = "submit" value = "Log-in" /><br>
-            <a href = "Signup.html">Don't have an account? Sign-up</a><br>
-        </form>
         </div>
+        <div class="container5">
+            <a href = "Signup.html">Don't have an account? Sign-up</a><br>
+        </div>
+        </form>
     </body>
 </html>
