--- a/Signup.html
+++ b/Signup.html
@@ -18,10 +18,12 @@
             <input type = "password" name = "confirm_password" placeholder="Confirm Password" /><br>
             <input type = "checkbox" />Remember me<br>
             <input type = "submit" value = "Sign-up" /><br>
+        </div>
+        <div class="container4">
             <a href = "Signin.html">Already have an account? Log-in</a><br>
             <a href = "info.html">More info</a>
-        </form>
         </div>
+        </form>
     </body>
     <script>
         const password = document.querySelector('input[name="password"]');
