--- a/info.html
+++ b/info.html
@@ -42,9 +42,11 @@
             <textarea cols = "59" rows = "5" placeholder="Write about preferences here..."></textarea><br><br>
             <input type = "submit" value = "Submit" />
             <input type = "reset" value = "Reset" /><br>
+        </div>
+        <div class="container6">
             <a href = "Signin.html">Go back to Sign-in page</a>
             <a href = "Signup.html">Go back to Sign-up page</a>
-        </form>
         </div>
+        </form>
     </body>
 </html>
