--- a/Signup.html
+++ b/Signup.html
@@ -15,11 +15,13 @@
             <p>Password</p>
             <input type = "password" name = "password" placeholder="Enter Password" />
             <input type = "password" name = "confirm_password" placeholder="Confirm Password" /><br>
-            <input type = "checkbox" />Remember me<br>
-            <input type = "submit" value = "Sign-up" /><br>
+            <input type = "checkbox" />Remember me</a>
+            <input type = "checkbox" value = "dark-mode"/>Toggle dark mode<br><br>
+            <input type = "submit" value = "Sign-up" />
+            <input type = "reset" value = "Reset" />
         </div>
         <div class="container4">
-            <a href = "Signin.html">Already have an account? Log-in</a><br>
+            <a href = "Signin.html">Already have an account? Sign-in</a><br>
             <a href = "info.html">More info</a>
         </div>
         </form>
