--- a/info.html
+++ b/info.html
@@ -11,6 +11,7 @@
         <h1>More info!</h1>
         <p>Why we ask for more information? We ask for more information to provide a better user experience and ensure the security of your account.</p>
         <form>
+            <input type = "checkbox" value = "darkmode"/>Toggle dark mode<br><br>
             <label>Boy Girl</label><br>
             <input type = "radio" name = "gender" value = "male" />
             <input type = "radio" name="gender" value = "female" /><br><br>
@@ -48,5 +49,6 @@
             <a href = "Signup.html">Go back to Sign-up page</a>
         </div>
         </form>
+        <script src="script.js"></script>
     </body>
 </html>
