--- a/Signin.html
+++ b/Signin.html
@@ -13,13 +13,16 @@
             <p>Username</p>
             <input type = "text" placeholder="Enter Username" />
             <p>Password</p>
-            <input type = "password" placeholder="Enter Password" />
+            <input type = "password" placeholder="Enter Password" /><br>
+            <input type = "checkbox" value = "dark_mode"/>Toggle dark mode<br><br>
             <a href = "#">Forgot Password?</a><br><br>
-            <input type = "submit" value = "Log-in" /><br>
+            <input type = "submit" value = "Log-in" />
+            <input type = "reset" value = "Reset" />
         </div>
         <div class="container5">
             <a href = "Signup.html">Don't have an account? Sign-up</a><br>
         </div>
         </form>
+        <script src="script.js"></script>
     </body>
 </html>
