--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
         <h1>More info!</h1>
         <p>Why we ask for more information? We ask for more information to provide a better user experience and ensure the security of your account.</p>
         <form>
-            <input type = "checkbox" value = "darkmode"/>Toggle dark mode<br><br>
+            <input type = "checkbox" value = "dark-mode"/>Toggle dark mode<br><br>
             <label>Boy Girl</label><br>
             <input type = "radio" name = "gender" value = "male" />
             <input type = "radio" name="gender" value = "female" /><br><br>
