--- a/Signup.html
+++ b/Signup.html
@@ -15,7 +15,7 @@
             <p>Password</p>
             <input type = "password" name = "password" placeholder="Enter Password" />
             <input type = "password" name = "confirm_password" placeholder="Confirm Password" /><br>
-            <input type = "checkbox" />Remember me</a>
+            <input type = "checkbox" />Remember me<br>
             <input type = "submit" value = "Sign-up" />
             <input type = "reset" value = "Reset" />
         </div>
