--- a/Signin.html
+++ b/Signin.html
@@ -14,7 +14,7 @@
             <input type = "text" placeholder="Enter Username" />
             <p>Password</p>
             <input type = "password" placeholder="Enter Password" /><br>
-            <a href = "#">Forgot Password?</a><br><br>
+            <a href = "forgotpassword.html">Forgot Password?</a><br><br>
             <input type = "submit" value = "Log-in" />
             <input type = "reset" value = "Reset" />
         </div>
