--- a/info.html
+++ b/info.html
@@ -17,9 +17,9 @@
             <label>Date of Birth DOB</label><br>
             <input type = "date" name = "dob" /><br><br>
             <label>Email ID</label><br>
-            <input type = "email" placeholder="Enter your email id" value="email"/><br><br>
+            <input type = "email" placeholder="Enter your email id"/><br><br>
             <label>Phone number</label><br>
-            <input type = "tel" placeholder="Enter your phone number" value="phone"/><br><br>
+            <input type = "tel" placeholder="Enter your phone number"/><br><br>
             <label>Country</label><br>
             <select>
                 <option>India</option>
