--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -12,13 +12,16 @@
                 <p>This is for if you forgot your password. (If you didn't put anything in the "more info" page, you can't recover your page unless with further stuff)</p>
                 <form>
                 <label>Enter email!</label>
-                <input type="email" placeholder="Enter email!" value="email"/><br>
+                <input type="email"/><br>
                 <label>Enter phone number!</label>
-                <input type="tel" placeholder="Enter phone number!" value="phone">
+                <input type="tel" placeholder="Enter phone number!"><br>
+                <input type = "submit" value = "Submit" />
+                <input type="reset">
             </form>
         </div>
         <div class="container8">
             <a href="Signin.html">Go back</a>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
